--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                                 <img src="https://lp-cms-production.imgix.net/2025-03/AdobeStock97198408-crop.jpeg?auto=format,compress&q=72&w=1440&h=810&fit=crop" alt="Montenegro beautiful coastal destination" />
                             </div>
                             <div class="slide-overlay">
-                                <h3 data-en="Montenegro" data-al="Malë të zi" data-de="Montenegro">Malë të zi</h3>
+                                <h3 data-en="Montenegro" data-al="Malë të zi" data-de="Montenegro">Mal të zi</h3>
                                 <p data-en="Discover the beauty of Montenegro's beaches with our special offers for wonderful holidays. Montenegro is an extraordinary destination known for its beautiful beaches." data-al="Zbulo bukuritë e plazheve të Malit të Zi me ofertat tona të veçanta për pushime të mrekullueshme. Mal i zi është një destinacion i pazakontë i njohur për plazhet e tij të bukura." data-de="Entdecken Sie die Schönheit der Strände Montenegros mit unseren besonderen Angeboten für wunderbare Ferien. Montenegro ist ein außergewöhnliches Ziel, bekannt für seine wunderschönen Strände.">Zbulo bukuritë e plazheve të Malit të Zi me ofertat tona të veçanta për pushime të mrekullueshme. Mal i zi është një destinacion i pazakontë i njohur për plazhet e tij të bukura.</p>
                             </div>
                         </div>
